# caf-ocl

./: CMakeLists.txt  FindclFFT.cmake  LICENSE  README.md
sources/: CMakeLists.txt  fft.c  fft.cpp
